--- a/static/index.html
+++ b/static/index.html
@@ -14,7 +14,7 @@
                 <h2>游戏设置</h2>
                 <div>
                     <label for="blackModelUrl">黑方模型URL：</label>
-                    <input type="text" id="blackModelUrl" value="http://10.234.20.35:81/v1/chat/completions">
+                    <input type="text" id="blackModelUrl" value="http://ip:port/v1/chat/completions">
                 </div>
                 <div>
                     <label for="blackModelName">黑方模型名称：</label>
@@ -22,7 +22,7 @@
                 </div>
                 <div>
                     <label for="whiteModelUrl">白方模型URL：</label>
-                    <input type="text" id="whiteModelUrl" value="http://10.234.20.35:81/v1/chat/completions">
+                    <input type="text" id="whiteModelUrl" value="http://ip:port/v1/chat/completions">
                 </div>
                 <div>
                     <label for="whiteModelName">白方模型名称：</label>
